# server/api/Services/IJobApplicationService.cs
@@ -8,6 +8,6 @@ public interface IJobApplicationService
     Task<JobApplication> CreateAsync(JobApplicationCreateDto dto, string userId);
     Task<List<JobApplication>> GetAllAsync(string userId);
     Task<JobApplication> GetByIdAsync(string id, string userId);
-    Task<JobApplication> UpdateAsync(string id, JobApplicationUpdateDto dto, string userId);
+    Task UpdateAsync(string id, JobApplicationUpdateDto dto, string userId);
     Task<bool> DeleteAsync(string id, string userId);
 }
